manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
spec:
  type: NodePort
  selector:
    app: helloworld
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
