manifests/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-new
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: helloworld-service
          servicePort: 8080
